[gd_scene load_steps=2 format=3 uid="uid://btgpwtf1gnit5"]

[ext_resource type="Script" path="res://audio_manager.gd" id="1_c5y3g"]

[node name="AudioHandler" type="Node"]
process_mode = 3
script = ExtResource("1_c5y3g")

[node name="BGMPlayer1" type="AudioStreamPlayer" parent="."]

[node name="BGMPlayer2" type="AudioStreamPlayer" parent="."]

[node name="Sounds" type="Node" parent="."]

[connection signal="finished" from="BGMPlayer1" to="." method="_on_music_finished"]
[connection signal="finished" from="BGMPlayer2" to="." method="_on_music_finished"]
